--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "axios-rest-client": "^0.1.10",
     "element-ui": "^2.4.11",
+    "file-saver": "^2.0.0",
     "iview": "^3.1.5",
     "jquery": "^3.3.1",
     "qs": "^6.6.0",
     "screenfull": "^3.3.3",
+    "script-loader": "^0.7.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "webpack": "^4.25.1"
+    "webpack": "^4.25.1",
+    "xlsx": "^0.14.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
