组织架构图

--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "axios-rest-client": "^0.1.10",
     "core-decorators": "^0.20.0",
+    "downloadjs": "^1.4.7",
     "element-ui": "^2.4.11",
     "file-saver": "^2.0.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "iview": "^3.1.5",
     "jquery": "^3.3.1",
     "qs": "^6.6.0",
     "screenfull": "^3.3.3",
     "script-loader": "^0.7.2",
+    "transformation-matrix": "^1.14.1",
     "vue": "^2.5.17",
+    "vue-organization-chart": "^1.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
