--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "iview": "^3.1.5",
     "jquery": "^3.3.1",
     "qs": "^6.6.0",
+    "scp2": "^0.5.0",
     "screenfull": "^3.3.3",
     "script-loader": "^0.7.2",
     "transformation-matrix": "^1.14.1",
