--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.1",
+    "compression-webpack-plugin": "^2.0.0",
     "element-ui": "^2.4.11",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
