--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "script-loader": "^0.7.2",
     "transformation-matrix": "^1.14.1",
     "vue": "^2.5.17",
+    "vue-amap": "^0.5.8",
     "vue-fragment": "^1.5.0",
     "vue-organization-chart": "^1.0.1",
     "vue-router": "^3.0.1",
