--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 NODE_ENV = 'production'
-VUE_APP_BASEAPI= 'http://192.168.0.192:9001'
+VUE_APP_BASEAPI= 'http://192.168.0.192:20002'
+VUE_APP_SERVER_DIR= '/home/zhaowei/erp/frontend/'
