--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "dev-build": "vue-cli-service build --mode dev-build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios-rest-client": "^0.1.10",
     "core-decorators": "^0.20.0",
+    "dayjs": "^1.8.10",
     "downloadjs": "^1.4.7",
     "element-ui": "^2.4.11",
     "file-saver": "^2.0.0",
