--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,11 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true
-    }
+        "experimentalDecorators": true,
+        "baseUrl": "./",
+        "paths": {
+        "@assets/*": ["src/assets/*"],
+        "@common/*": ["src/common/*"]
+        }
+    },
+    // "exclude": ["node_modules", "dist"]
 }
