--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,7 @@
 NODE_ENV = development
-VUE_APP_BASEAPI= 'http://192.168.0.192:20002'
+VUE_APP_BASEAPI= 'http://192.168.18.216:8000'
 test = 'http://192.168.0.192:9001'
 m = 'http://192.168.18.219:8000'
+m2 = 'http://192.168.18.216:8000'
+m3 = 'http://192.168.18.234:20000'
+VUE_CLI_BABEL_TRANSPILE_MODULES:true
