--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = 'production'
 VUE_APP_BASEAPI= 'http://192.168.0.192:20002'
 VUE_APP_SERVER_DIR= '/home/zhaowei/erp/frontend/'
+VUE_APP_STATIC = 'http://info.szzhaowei.net:20002/media/'
