--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-decorators": "^0.20.0",
     "dayjs": "^1.8.10",
     "downloadjs": "^1.4.7",
+    "echarts": "^4.2.1",
     "element-ui": "^2.4.11",
     "file-saver": "^2.0.0",
     "html2canvas": "^1.0.0-alpha.12",
