--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "scp2": "^0.5.0",
     "screenfull": "^3.3.3",
     "script-loader": "^0.7.2",
+    "sortablejs": "^1.10.0-rc2",
     "transformation-matrix": "^1.14.1",
     "vue": "^2.5.17",
     "vue-amap": "^0.5.8",
