--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.8.10",
     "downloadjs": "^1.4.7",
     "echarts": "^4.2.1",
+    "ele-calendar": "^1.2.0",
     "element-ui": "^2.9.1",
     "file-saver": "^2.0.0",
     "html2canvas": "^1.0.0-alpha.12",
