--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-fragment": "^1.5.0",
     "vue-organization-chart": "^1.0.1",
     "vue-router": "^3.0.1",
+    "vue-virtual-scroll-list": "^1.4.4",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "webpack": "^4.25.1",
