--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "vue-virtual-scroll-list": "^1.4.4",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
+    "vxe-table": "^2.7.22",
     "webpack": "^4.25.1",
+    "xe-utils": "^2.3.0",
     "xlsx": "^0.14.1"
   },
   "devDependencies": {
