--- a/.env.dev-build
+++ b/.env.dev-build
@@ -1,4 +1,4 @@
 NODE_ENV = 'production'
-VUE_APP_BASEAPI= 'http://192.168.0.192:20002'
-VUE_APP_SERVER_DIR= '/home/zhaowei/erp/frontend/'
-VUE_APP_STATIC = 'http://info.szzhaowei.net:20002/media/'
+VUE_APP_BASEAPI= 'http://192.168.0.192:9001'
+VUE_APP_SERVER_DIR= '/home/zhaowei/erp_test/frontend/'
+VUE_APP_STATIC = 'http://192.168.0.192:9001/media/'
